--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "country-state-city": "^3.2.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
